--- a/.drone.yml
+++ b/.drone.yml
@@ -10,7 +10,8 @@ steps:
   - name: test
     image: node:lts-slim
     commands:
-      - apt install firefox
+      - apt-get update
+      - apt-get install firefox
       - npm install
       - npm test
 # trigger:
