--- a/.drone.yml
+++ b/.drone.yml
@@ -10,10 +10,7 @@ steps:
   - name: test
     image: node:lts
     commands:
-      - apt update
-      - apt install software-properties-common -y
-      - add-apt-repository ppa:mozillateam/ppa
-      - apt install firefox -y
+      - /bin/sh ./setup-firefox.sh
       - npm install
       - npm test
 # trigger:
