--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,7 @@ steps:
     commands:
       - /bin/sh ./setup-firefox.sh
       - yarn install
-      - yarn test -- --filter Vault
+      - yarn test --filter Account
 # trigger:
 #   event:
 #     - pull_request
